--- a/helm-sample-dockerfile/values-production.yaml
+++ b/helm-sample-dockerfile/values-production.yaml
@@ -1,8 +1,8 @@
 # service:
 #   type: LoadBalancer
 image:
-  repository: gcr.io/ilyagorban-org/sample
-  tag: a8625b6
+  repository: ilyag/python-app
+  tag: abcd
   pullPolicy: Always
 tolerations:
 - key: "dedicated"
